# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world
    3. /etc/portage/virtuals is _USER_ configs only. Do not copy the old file.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  02 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh, pym/portage.py:
  Added support for src'ing a profile bashrc.  Fex, if 
  /etc/make.profile/profile.bashrc exists, it is sourced prior to ebuild.sh 
  defining any of it's functions.  (#58415).

  02 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/emerge-webrsync: General
  cleanup; uses the make.conf defined FETCHCOMMAND for fetching (fixing #57887),
  runs emerge metadata after a successful sync also.

*portage-2.0.51_pre14 (02 Aug 2003): Fixes and Public Readiness

  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> do*: Added exit calls
	on failures and changed the install to use short options for BSD compat.
	
  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: unset
	GLOBIGNORE added. Echo out the confingure command from econf. Moved the
	maketest code to dyn_preinst so it didn't force-run maketest. Added a
	patch for keyword expansion (requires portage-2.0.51 for use).

  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> emerge: --fetch-all-uri
	added to force all URIs to be downloaded (works like features=cvs). libc
	version printing enhancements. Fixed the binary package selection in an
	alt ROOT. Headers and libtool added to info. --ask removed on a resume.
	
  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> prepstrip: Change ewarn
	to echos to stderr with beeps.
	
  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> repoman: Added to the
	OK message output for issues that fail.

  02 Aug 2004; Nicholas Jones <carpaski@gentoo.org> make.conf: Typo correction
	patch added.
	