@@ -9,6 +9,11 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  02 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman, pym/portage.py:
+  Added local caching of metadata.dtd, to prevent flaky connections from flagging
+  a packages metadata.dtd as invalid due to xmllint failing to fetch 
+  metadata.dtd.  Simplified version of patch in (#57210).
+
   02 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh, pym/portage.py:
   Added support for src'ing a profile bashrc.  Fex, if 
   /etc/make.profile/profile.bashrc exists, it is sourced prior to ebuild.sh 
